--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mysten/sui": "^1.30.2",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "navi-sdk": "^1.6.10",
     "next": "15.3.3",
