--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@mysten/sui": "^1.30.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "mysql2": "^3.14.1",
     "navi-sdk": "^1.6.10",
     "next": "15.3.3",
+    "node-cron": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
